# interactive-learning-platform

./: .gitignore  Dockerfile  README.md
Frontend/: Dockerfile  README.md
Frontend/src/: routeTree.gen.ts  styles.css
Frontend/src/components/: Beyond21Logo.tsx  FloatingBackground.tsx  Mascot.tsx  MedicalInsights.tsx
Frontend/src/data/: words.ts
Frontend/src/lib/: adaptive.ts  api.ts  imageService.ts
Frontend/src/routes/: __root.tsx  index.tsx  learn.index.tsx  (+6 more)
backend/: .env.example  .gitignore  .vscode-settings.json  CONTRIBUTING.md  FEATURE_EXAMPLE.md  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  scripts.py
backend/app/: __init__.py  config.py  middleware.py  schemas.py
backend/app/api/routes/: __init__.py  health.py  lessons.py  pipeline.py  predict.py
backend/app/database/: connection.py
backend/app/models/: dqn_model.h5  fcm_model.pkl  lesson.py  pipeline.py  profile.py
backend/app/services/: __init__.py  brain_pipeline.py  groq_service.py  image_service.py  lesson_service.py  pollinations_service.py  profile_service.py  whisper_client.py
backend/db/profiles/: child_001.json  child_4.json
backend/db/profiles/child_001_interactions/: 20260512_003806.json  20260512_003920.json  20260512_004701.json
backend/db/profiles/child_4_interactions/: 20260512_005658.json  20260512_011157.json  20260512_011354.json  20260512_060304.json  20260512_060531.json  20260512_065249.json
backend/models/: pipeline.py  profile.py
backend/routers/: pipeline.py
backend/services/: groq_service.py  profile_service.py
